fixed grid-gap overflow in grid-container

--- a/sectionStyles.css
+++ b/sectionStyles.css
@@ -1,6 +1,5 @@
 .container {
   max-width: 1280px;
-  margin: auto;
   padding: var(--space-sm);
   box-sizing: border-box;
   line-height: 32px;
@@ -110,7 +109,7 @@ header {
 .grid-container {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  gap: 30px;
+  grid-gap: 24px 0;
   grid-template-rows: auto;
   width: 100%;
 }
@@ -265,6 +264,10 @@ footer {
 
   .header__info {
     margin-right: 64px;
+  }
+
+  .grid-container {
+    grid-gap: 24px;
   }
 
   .grid-item {
